Fix: AWS_SECRET_ACCESS_KEY typo

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         AWS_REGION = 'us-east-1'
         AWS_ACCESS_KEY_ID = 'test'
-        AWS_SCRET_ACCESS_KEY = 'test'
+        AWS_SECRET_ACCESS_KEY = 'test'
         AWS_DEFAULT_REGION = 'us-east-1'
         AWS_ENDPOINT = 'http://host.docker.internal:4566'
     }
